# GeminiOxide

./: .gitignore  App.py  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  app.rc  build.rs  notes  working
.github/: copilot-instructions.md
.github/workflows/: bump-version.yml
scripts/: dev.sh  security-audit.sh
src/: .env.example  api_client.rs  font_setup.rs  img_utils.rs  main.rs  screen_cap.rs  ui.rs  ui_components.rs  ui_system.rs  utils.rs
