[package]
name = "Gemini_Interface"
version = "0.1.1"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
egui_commonmark = "0.19"
image = "0.25.5"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
screenshots = "0.8"

[build-dependencies]
winres = "0.1"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
