[package]
name = "gemini-oxide"
version = "0.2.5"
edition = "2021"
description = "A Rust GUI application that provides an interface to Google's Gemini AI, with support for text prompts and image inputs"
authors = ["isandrocks"]
license = "MIT"
repository = "https://github.com/isandrocks/GeminiOxide"
homepage = "https://github.com/isandrocks/GeminiOxide"
documentation = "https://github.com/isandrocks/GeminiOxide#readme"
keywords = ["gemini", "ai", "gui", "egui", "rust"]
categories = ["gui", "command-line-utilities"]
readme = "README.md"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
egui_commonmark = "0.22"
image = "0.25.9"
reqwest = { version = "0.13", features = ["json", "native-tls-vendored", "stream", "multipart"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
rfd = "0.17"
arboard = "3.6.1"
base64 = "0.22"

[build-dependencies]
winres = "0.1"
dotenv = "0.15"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
